Fixed dialog scrollbar being hidden on Chrome-OSX
See issue #5

--- a/starmap-styling.css
+++ b/starmap-styling.css
@@ -1,3 +1,23 @@
+/*----------------------------------
+  Scrollbar fix for Chrome on OSX
+----------------------------------*/
+/* http://stackoverflow.com/questions/7855590/how-can-i-prevent-scroll-bars-from-being-hidden-for-trackpad-users-in-webkit */
+#modalBody::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 11px;
+    height: 11px;
+}
+
+#modalBody::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    border: 0px;
+    background-color: #999;
+}
+
+#modalBody::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
 /*----------------------
   Stars
 ----------------------*/
